bs2ramfs: Add mvp (squashed changes from mvp branch)

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -20,6 +20,7 @@ if BLOCK
 config FS_IOMAP
 	bool
 
+source "fs/bs2ramfs/Kconfig"
 source "fs/ext2/Kconfig"
 source "fs/ext4/Kconfig"
 source "fs/jbd2/Kconfig"
