Create BS2-FAT files
Co-authored-by: Tamino Bauknecht <dev@tb6.eu>
Co-authored-by: Nils Lißner <nilslissner@gmx.de>

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -21,6 +21,7 @@ config FS_IOMAP
 	bool
 
 source "fs/bs2ramfs/Kconfig"
+source "fs/bs2fat/Kconfig"
 source "fs/ext2/Kconfig"
 source "fs/ext4/Kconfig"
 source "fs/jbd2/Kconfig"
